Quick tweak to project layout formatting to prevent image overflow.

--- a/assets/css/base/2-layout/_projects.scss
+++ b/assets/css/base/2-layout/_projects.scss
@@ -3,6 +3,8 @@
 .project {
     margin-bottom: 4rem;
 
+    overflow: hidden;
+
     a {
         border-bottom: 1px solid #069;
     }
